Add a Moby Dick page and a menu

--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Learn Enough HTML to be dangerous</title>
     <meta charset="utf-8">
   </head>
   <body>
+
+    <div>
+      <a href="index.html">Home</a>
+      <a href="tags.html">HTML Tags</a>
+      <a href="moby_dick.html">Moby Dick</a>
+    </div>
+
+    <header>
     <h1>The Learn Enough Story</h1>
+    </header>
+    <div>
+
     <p>
       Learn Enough to Be Dangerous is a leader in the movement to teach <em>technical sophistication</em>, the seemingly magical ability to take
       command of your computer and get it to do your bidding. This includes
@@ -21,16 +32,28 @@
       </a>
       You should follow Learn Enough on Twitter <a href="https://twitter.com/learnenough" target="_blank">here</a>.
     </p>
+    </div>
+    <div>
+
+
     <p>
       HTML was created by the original "web developer", computer scientist <a href="https://en.wikipedia.org/wiki/Tim_Berners-Lee">Tim Berners-Lee</a>. It's not true that Sir Tim invented HTML in order to share pictures of his cat, but it would be cool if it were.
     </p>
     <a href="https://www.flickr.com/photos/deborah_s_perspective/14144861329 on 2016-01-09">
       <img src="images/kitten.jpg" alt="An adorable kitten"/>
     </a>
+    </div>
+    <div>
+
+
     <h2>Background</h2>
     <p>
       Learn Enough to Be Dangerous is an outgrowth of the <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a> and the <a href="http://www.softcover.io/">Softcover publishing platform</a>. This page is part of the sample site for <a href="http://learnenough.com/html-tutorial"><em>Learn Enough HTML to be Dangerous</em></a>, which teaches the basics of <strong>H</strong>yper<strong>T</strong>ext <strong>M</strong>arkup <strong>L</strong>anguage, the universal language of the World Wide Web. Other relater tutorials can be found at <a href="http://learnenough.com/">learnenough.com</a>.
     </p>
+    </div>
+    <div>
+
+
     <h2>Founders</h2>
     <p>
       Learn Enough to Be Dangerous was founder in 2015 by Michael Hartl, Lee Donahoe, and Nick Merwin. We believe that the kind of technical sophistication taught by the Learn Enough tutorials can benefit <em><strong>at least a billion people</strong></em>, and probably more.
@@ -62,5 +85,6 @@
     <p>
       You should follow Nick on Twitter <a href="https://twitter.com/nickmerwin" target="_blank">here</a>
     </p>
+    </div>
   </body>
 </html>
