--- a/tags.html
+++ b/tags.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <title>HTML tags</title>
   <meta charset="utf-8"/>
 </head>
 <body>
-  <h1>Important HTML tags</h1>
+
+  <div>
+    <a href="index.html">Home</a>
+    <a href="tags.html">HTML Tags</a>
+    <a href="moby_dick.html">Moby Dick</a>
+
+  </div>
+
+  <header>
+    <h1>Important HTML tags</h1>
+  </header>
+
+  <div>
+
+
   <a href="https://www.flickr.com/photos/jdhancock/3814523970" target="_blank"><img src="images/storm_trooper_tagged.jpg" alt="Tagged Storm Trooper"/></a>
   <p>
     This page is designed as a quick reference of some of the common tags covered in <a href="http://learnenough.com/html-tutorial"><em>Learn Enough HTML to Be Dangerous</em></a>. In the process of making it, we'll learn how to make HTML <em>tables</em> via <code>table</code> and related tags.
@@ -13,6 +27,9 @@
   <p>
     The tables below don't include all HTML tags, but they do list many of the most important ones.
   </p>
+  </div>
+  <div>
+
   <h2>Block Elements</h2>
     <table>
       <tr>
@@ -51,7 +68,8 @@
         <td>include a table data cell</td>
       </tr>
     </table>
-
+  </div>
+  <div>
   <h2>Inline Elements</h2>
     <table>
       <tr>
@@ -97,5 +115,6 @@
         <td><code>technical sophistication</code></td>
       </tr>
     </table>
+    </div>
 </body>
 </html>
