Finish the sample website

--- a/tags.html
+++ b/tags.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 
-  <div>
-    <a href="index.html">Home</a>
-    <a href="tags.html">HTML Tags</a>
-    <a href="moby_dick.html">Moby Dick</a>
+  <div style="text-align: right;">
+    <a href="index.html" style="text-decoration:none;color:#000000;">Home</a>
+    <a href="tags.html" style="margin-left: 10px;text-decoration:none;color: #000000;">HTML Tags</a>
+    <a href="moby_dick.html" style="margin-left: 10px;text-decoration:none;color:#000000;">Moby Dick</a>
 
   </div>
 
@@ -38,8 +38,8 @@
         <th>Purpose</th>
       </tr>
       <tr>
-        <td><code>h1</code>&ndash;<code>h6</code></td>
-        <td>headings</td>
+        <td style="padding:20px"><code>h1</code>&ndash;<code>h6</code></td>
+        <td style="padding:20px">headings</td>
         <td>include a heading (levels 1&ndash;6)</td>
       </tr>
       <tr>
@@ -116,5 +116,40 @@
       </tr>
     </table>
     </div>
+    <div>
+    <h2>Document tags</h2>
+      <table>
+        <tr>
+          <th>Tag</th>
+          <th>Name</th>
+          <th>Purpose</th>
+        </tr>
+        <tr>
+          <td><code>html</code></td>
+          <td>HTML Specifier</td>
+          <td>Tells the browser that we are using HTML</td>
+        </tr>
+        <tr>
+          <td><code>head</code></td>
+          <td>Document Header</td>
+          <td>Specifies the title and other info about the page</td>
+        </tr>
+        <tr>
+          <td><code>body</code></td>
+          <td>Document Body</td>
+          <td>Begins the body of the page</td>
+        </tr>
+        <tr>
+          <td><code>title</code></td>
+          <td>Title tag</td>
+          <td>Specifies a title</td>
+        </tr>
+        <tr>
+          <td><code>meta</code></td>
+          <td>META Tag</td>
+          <td>Specifies information about the document, like character set</td>
+        </tr>
+      </table>
+      </div>
 </body>
 </html>
