--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   </head>
   <body>
 
-    <div>
-      <a href="index.html">Home</a>
-      <a href="tags.html">HTML Tags</a>
-      <a href="moby_dick.html">Moby Dick</a>
+    <div style="text-align: right;">
+      <a href="index.html" style="text-decoration: none; color: #000000;">Home</a>
+      <a href="tags.html" style="margin: 0 0 0 10px; text-decoration: none; color: #000000;">HTML Tags</a>
+      <a href="moby_dick.html" style="margin: 0 0 0 10px; text-decoration: none; color: #000000;">Moby Dick</a>
     </div>
 
     <header>
@@ -45,6 +45,20 @@
     </div>
     <div>
 
+<TAG>Quotations</TAG>
+
+<p>
+  In addition to hosting most of the world's supply of kitten videos, the Web is also full of inspiring quotes, perhaps none more so than this one:
+</p>
+
+<blockquote style="padding: 2px 20px; background: #fafafa;">
+  <p>
+    <em>Don't believe every quote you read on the Internet</em>
+    <br />
+    -Abraham Lincoln
+  </p>
+
+</blockquote>
 
     <h2>Background</h2>
     <p>
